# cookiecutter-kietzmannlab-template

./: PROMPTS.md  README.md  cookiecutter.json  tox.ini
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_create_template.py
{{cookiecutter.package_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: test_and_deploy.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.module_name}}/: __init__.py  kietzmannlab.yaml
