[build-system]
{% if cookiecutter.use_git_tags_for_versioning == 'y' and cookiecutter.package_name != "based-repo-bar" -%}
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
{%- else -%}
requires = ["setuptools>=42.0.0", "wheel"]
{%- endif %}
build-backend = "setuptools.build_meta"

{% if cookiecutter.use_git_tags_for_versioning == 'y' and cookiecutter.package_name != "based-repo-bar" %}
[tool.setuptools_scm]
write_to = "src/{{cookiecutter.module_name}}/_version.py"
{%- endif %}

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
